--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMt61093ggCHnmnKqfqpfgr",
+      "authorship_tag": "ABX9TyN+BpK2ZfK6W2ENEYABEtR0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,6 +48,205 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "class RobotVacuumAgent:\n",
+        "\n",
+        "    def __init__(self,filename):\n",
+        "        \"\"\"\n",
+        "        init function establishes board, robotRow, robotCol\n",
+        "        :param filename: establishes board\n",
+        "        \"\"\"\n",
+        "        with open(filename, \"r\") as file:\n",
+        "            self.board = [[x for x in line.split()] for line in file]\n",
+        "\n",
+        "        self.num_spaces = 0 # number of potential clean/dirty spaces in board\n",
+        "\n",
+        "        for r in range(len(self.board)):\n",
+        "            for c in range(len(self.board[r])):\n",
+        "                self.num_spaces += 1\n",
+        "                if self.board[r][c] == '@' or self.board[r][c] == '!': # find the location of the robot\n",
+        "                    self.robotRow = r;\n",
+        "                    self.robotCol = c;\n",
+        "\n",
+        "\n",
+        "    def print(self):\n",
+        "        \"\"\"\n",
+        "        displays board to console\n",
+        "        \"\"\"\n",
+        "        for r in range(len(self.board)):\n",
+        "            for c in range(len(self.board[r])):\n",
+        "                print(self.board[r][c], end = ' ')\n",
+        "            print()\n",
+        "\n",
+        "\n",
+        "    def do_something(self):\n",
+        "        \"\"\"\n",
+        "        can do two actions: either \"suck up dirt\" or \"move in either of the four directions\"\n",
+        "        \"\"\"\n",
+        "        if self.board[self.robotRow][self.robotCol] == '!':\n",
+        "            self.board[self.robotRow][self.robotCol] = '@'; #just sucked up the dirt\n",
+        "        else:\n",
+        "            rand = random.randint(0,3)\n",
+        "            if rand == 0:\n",
+        "                self.move_up()\n",
+        "            elif rand == 1:\n",
+        "                self.move_down()\n",
+        "            elif rand == 2:\n",
+        "                self.move_left()\n",
+        "            else:\n",
+        "                self.move_right()\n",
+        "\n",
+        "    def out_of_bounds(self, row, col):\n",
+        "        \"\"\"\n",
+        "        :param row:\n",
+        "        :param col:\n",
+        "        :return: True if (row,col) will be out of bounds of self.board\n",
+        "                otherwise, returns False\n",
+        "        \"\"\"\n",
+        "        try:\n",
+        "            if row < 0 or row >= len(self.board) or col < 0 or col >= len(self.board[row]):\n",
+        "                return True\n",
+        "            else:\n",
+        "                return False\n",
+        "        except:\n",
+        "            print('exception occurred -- out of bounds')\n",
+        "            return True\n",
+        "\n",
+        "\n",
+        "    def move_up(self):\n",
+        "        \"\"\"\n",
+        "        moves robot 1 space up (north)\n",
+        "        :return:\n",
+        "        \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow -1, self.robotCol):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotRow -= 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "    def move_down(self):\n",
+        "        \"\"\"\n",
+        "        moves robot 1 space down (south)\n",
+        "        :return:\n",
+        "        \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow+1, self.robotCol):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotRow += 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "\n",
+        "    def move_left(self):\n",
+        "        \"\"\"\n",
+        "        moves robot 1 space left (west)\n",
+        "        :return:\n",
+        "        \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow, self.robotCol-1):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotCol -= 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "\n",
+        "    def move_right(self):\n",
+        "        \"\"\"\n",
+        "         moves robot 1 space right (east)\n",
+        "         :return:\n",
+        "         \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow, self.robotCol+1):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotCol += 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "\n",
+        "    def utility(self):\n",
+        "        \"\"\"\n",
+        "        :return: the number of clean spots in the room\n",
+        "        \"\"\"\n",
+        "        result = 0\n",
+        "        for r in range(len(self.board)):\n",
+        "            for c in range(len(self.board[r])):\n",
+        "                if self.board[r][c] == '.' or self.board[r][c] == '@':\n",
+        "                    result += 1\n",
+        "        return result\n",
+        "\n",
+        "    def is_goal(self):\n",
+        "        \"\"\"\n",
+        "        :return: True if all of the spaces are clean; otherwise, False\n",
+        "        \"\"\"\n",
+        "        if self.utility() == self.num_spaces:\n",
+        "            return True\n",
+        "        else:\n",
+        "            return False\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    # create agent\n",
+        "    agent = RobotVacuumAgent(\"room1.txt\")\n",
+        "\n",
+        "    count = 0; # number of time steps\n",
+        "\n",
+        "    # run the vacuum until room is clean\n",
+        "    while not agent.is_goal():\n",
+        "        print(\"Number of moves: \", count)\n",
+        "        agent.print()\n",
+        "\n",
+        "        count += 1\n",
+        "        agent.do_something()\n",
+        "\n",
+        "    # final state\n",
+        "    print(\"Completed the task with \", count, \" moves.\")\n",
+        "    agent.print()"
+      ],
+      "metadata": {
+        "id": "DxNCaSoxHhK7",
+        "outputId": "cb86a8eb-c012-4b15-e3a7-68168103905b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 366
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-f2327f89d260>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m     \u001b[0;31m# create agent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 157\u001b[0;31m     \u001b[0magent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRobotVacuumAgent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"room1.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0;31m# number of time steps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-f2327f89d260>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, filename)\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;34m:\u001b[0m\u001b[0mparam\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mestablishes\u001b[0m \u001b[0mboard\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \"\"\"\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mboard\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'room1.txt'"
+          ]
+        }
       ]
     }
   ]
