--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+0QtK+VomC/8dZB6najBg",
+      "authorship_tag": "ABX9TyN+BpK2ZfK6W2ENEYABEtR0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,196 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "OWqt4EvyTNeY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "wttYgoyfBWLN"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import random\n",
+        "\n",
+        "class RobotVacuumAgent:\n",
+        "\n",
+        "    def __init__(self,filename):\n",
+        "        \"\"\"\n",
+        "        init function establishes board, robotRow, robotCol\n",
+        "        :param filename: establishes board\n",
+        "        \"\"\"\n",
+        "        with open(filename, \"r\") as file:\n",
+        "            self.board = [[x for x in line.split()] for line in file]\n",
+        "\n",
+        "        self.num_spaces = 0 # number of potential clean/dirty spaces in board\n",
+        "\n",
+        "        for r in range(len(self.board)):\n",
+        "            for c in range(len(self.board[r])):\n",
+        "                self.num_spaces += 1\n",
+        "                if self.board[r][c] == '@' or self.board[r][c] == '!': # find the location of the robot\n",
+        "                    self.robotRow = r;\n",
+        "                    self.robotCol = c;\n",
+        "\n",
+        "\n",
+        "    def print(self):\n",
+        "        \"\"\"\n",
+        "        displays board to console\n",
+        "        \"\"\"\n",
+        "        for r in range(len(self.board)):\n",
+        "            for c in range(len(self.board[r])):\n",
+        "                print(self.board[r][c], end = ' ')\n",
+        "            print()\n",
+        "\n",
+        "\n",
+        "    def do_something(self):\n",
+        "        \"\"\"\n",
+        "        can do two actions: either \"suck up dirt\" or \"move in either of the four directions\"\n",
+        "        \"\"\"\n",
+        "        if self.board[self.robotRow][self.robotCol] == '!':\n",
+        "            self.board[self.robotRow][self.robotCol] = '@'; #just sucked up the dirt\n",
+        "        else:\n",
+        "            rand = random.randint(0,3)\n",
+        "            if rand == 0:\n",
+        "                self.move_up()\n",
+        "            elif rand == 1:\n",
+        "                self.move_down()\n",
+        "            elif rand == 2:\n",
+        "                self.move_left()\n",
+        "            else:\n",
+        "                self.move_right()\n",
+        "\n",
+        "    def out_of_bounds(self, row, col):\n",
+        "        \"\"\"\n",
+        "        :param row:\n",
+        "        :param col:\n",
+        "        :return: True if (row,col) will be out of bounds of self.board\n",
+        "                otherwise, returns False\n",
+        "        \"\"\"\n",
+        "        try:\n",
+        "            if row < 0 or row >= len(self.board) or col < 0 or col >= len(self.board[row]):\n",
+        "                return True\n",
+        "            else:\n",
+        "                return False\n",
+        "        except:\n",
+        "            print('exception occurred -- out of bounds')\n",
+        "            return True\n",
+        "\n",
+        "\n",
+        "    def move_up(self):\n",
+        "        \"\"\"\n",
+        "        moves robot 1 space up (north)\n",
+        "        :return:\n",
+        "        \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow -1, self.robotCol):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotRow -= 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "    def move_down(self):\n",
+        "        \"\"\"\n",
+        "        moves robot 1 space down (south)\n",
+        "        :return:\n",
+        "        \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow+1, self.robotCol):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotRow += 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "\n",
+        "    def move_left(self):\n",
+        "        \"\"\"\n",
+        "        moves robot 1 space left (west)\n",
+        "        :return:\n",
+        "        \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow, self.robotCol-1):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotCol -= 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "\n",
+        "    def move_right(self):\n",
+        "        \"\"\"\n",
+        "         moves robot 1 space right (east)\n",
+        "         :return:\n",
+        "         \"\"\"\n",
+        "        if not self.out_of_bounds(self.robotRow, self.robotCol+1):\n",
+        "            if self.board[self.robotRow][self.robotCol] == '@':\n",
+        "                self.board[self.robotRow][self.robotCol] = '.'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '!':\n",
+        "                self.board[self.robotRow][self.robotCol] = '*'\n",
+        "            self.robotCol += 1\n",
+        "            if self.board[self.robotRow][self.robotCol] == '*':\n",
+        "                self.board[self.robotRow][self.robotCol] = '!'\n",
+        "            elif self.board[self.robotRow][self.robotCol] == '.':\n",
+        "                self.board[self.robotRow][self.robotCol] = '@'\n",
+        "\n",
+        "\n",
+        "    def utility(self):\n",
+        "        \"\"\"\n",
+        "        :return: the number of clean spots in the room\n",
+        "        \"\"\"\n",
+        "        result = 0\n",
+        "        for r in range(len(self.board)):\n",
+        "            for c in range(len(self.board[r])):\n",
+        "                if self.board[r][c] == '.' or self.board[r][c] == '@':\n",
+        "                    result += 1\n",
+        "        return result\n",
+        "\n",
+        "    def is_goal(self):\n",
+        "        \"\"\"\n",
+        "        :return: True if all of the spaces are clean; otherwise, False\n",
+        "        \"\"\"\n",
+        "        if self.utility() == self.num_spaces:\n",
+        "            return True\n",
+        "        else:\n",
+        "            return False\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    # create agent\n",
+        "    agent = RobotVacuumAgent(\"room1.txt\")\n",
+        "\n",
+        "    count = 0; # number of time steps\n",
+        "\n",
+        "    # run the vacuum until room is clean\n",
+        "    while not agent.is_goal():\n",
+        "        print(\"Number of moves: \", count)\n",
+        "        agent.print()\n",
+        "\n",
+        "        count += 1\n",
+        "        agent.do_something()\n",
+        "\n",
+        "    # final state\n",
+        "    print(\"Completed the task with \", count, \" moves.\")\n",
+        "    agent.print()"
+      ]
     }
   ]
 }
